created the html's structure

--- a/html/home.html
+++ b/html/home.html
@@ -3,9 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../icon/favicon.png" type="image/x-icon">
+    <title>Envalt guitars</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1>Envalt</h1>
+            <div>
+                <p>FOLLOW US:</p>
+                <a href="#"><img src="#" alt="Facebook"></a>
+                <a href="#"><img src="#" alt="Instagram"></a>
+                <a href="#"><img src="#" alt="X"></a>
+                <a href="#"><img src="#" alt="YouTube"></a>
+            </div>
+        </header>
+        <nav>
+            <a href="#">NEWS</a>
+            <a href="#">PRODUCTS</a>
+            <a href="#">ARTISTS</a>
+            <a href="#">VIDEOS</a>
+            <a href="#">SUPPORT</a>
+        </nav>
+        <div id="
+        emphasis">
+            <p>NEW SIGNATURE MODELS</p>
+        </div>
+        <div id="latest-news">
+            <!--Pode ser substituído por picture e sua legendas?-->
+            <h2>LASTEST NEWS</h2>
+            <img src="#" alt="news">
+            <img src="#" alt="news">
+            <img src="#" alt="news">
+            <img src="#" alt="news">
+            <div id="latest-news-view-all">
+                <a href="#">
+                    VIEW ALL
+                </a>
+            </div>
+        </div>
+        <div id="products">
+            <h2>PRODUCTS</h2>
+            <span>
+
+                <!--Usar picture?-->
+
+                <a href="#">ELECTRIC GUITARS</a>
+                <a href="#">HOLLOW BODIES</a>
+                <a href="#">ACOUSTICS</a>
+                <a href="#">ELECTRONICS</a>
+                <a href="#">ACESSORIES</a>
+            </span>
+        </div>
+        <div id="feature-products">
+            <h2>FEATURE PRODUCTS</h2>
+            <div id="feature-product-left">
+                <p>product</p>
+            </div>
+            <div id="feature-product-right=">
+                <p>product</p>
+            </div>
+            <div id="feature-products-view-more">
+                <a href="#">
+                    VIEW MORE FEATURES
+                </a>
+            </div>
+        </div>
+        <div id="videos">
+            <h2>VIDEOS</h2>
+            <div id="videos-view-all-videos">
+                <a href="#">VIEW ALL VIDEOS</a>
+            </div>
+        </div>
+        <div id="artist-focus">
+            <h2>ARTIST FOCUS</h2>
+            <p>artist's name</p>
+            <div id="artist-focus-view-more-artists">
+                <a href="#">VIEW MORE ARTISTS</a>
+            </div>
+        </div>
+        <div id="support">
+            <div id="support-more-details">
+                <a href="#">MORE DETAILS</a>
+            </div>
+        </div>
+        <div id="social-mideas-wall">
+            <div id="social-media-left">
+                <p>Envalt</p><h2>INSTAGRAM</h2>
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <div id="visit-left-social-media">
+                    <a href="#">VISIT OFFICIAL INSTAGRAM</a>
+                </div>
+            </div>
+            <div id="social-media-right"></div>
+                <p>Envalt</p><h2>FACEBOOK</h2>
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <img src="#" alt="image">
+                <div id="visit-right-social-media">
+                    <a href="#">VISIT OFFICIAL FACEBOOK</a>
+                </div>
+        </div>
+    </main>
+    <footer>
+        <h3>Envalt</h3>
+        <a href="#">CHANGE YOUR REGION</a>
+        <div>
+            <a href="#">CONTACT</a>
+            <a href="#">TERMS</a>
+            <a href="#">PRIVACY POLICY</a>
+            <a href="#">PROP65</a>
+            <a href="#">COUNTERFEIT WARNING</a>
+            <a href="#">ACCESSIBILLITY</a>
+            <a href="#">SITEMAP</a>
+        </div>
+        <p>Copyright...</p>
+    </footer>
 </body>
 </html>
