--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <h1>Envalt</h1>
-            <div>
+            <div id="">
                 <p>FOLLOW US:</p>
                 <a href="#"><img src="#" alt="Facebook"></a>
                 <a href="#"><img src="#" alt="Instagram"></a>
