--- a/html/home.html
+++ b/html/home.html
@@ -11,13 +11,14 @@
     <main>
         <header>
             <h1>Envalt</h1>
-            <div id="">
+            <div id="bottons-follow-us-header">
                 <p>FOLLOW US:</p>
                 <a href="#"><img src="#" alt="Facebook"></a>
                 <a href="#"><img src="#" alt="Instagram"></a>
                 <a href="#"><img src="#" alt="X"></a>
                 <a href="#"><img src="#" alt="YouTube"></a>
             </div>
+
         </header>
         <nav>
             <a href="#">NEWS</a>
