atualização de estrutura

--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,16 @@
 <body>
     <main>
         <header>
-            <h1>Envalt</h1>
+            <nav id="menu-hamburguer">
+                <a href="#">NEWS</a>
+                <a href="#">PRODUCTS</a>
+                <a href="#">ARTISTS</a>
+                <a href="#">VIDEOS</a>
+                <a href="#">SUPPORT</a>
+            </nav>
+            <div class="logo">
+                <h1>Envalt</h1>
+            </div>
             <div id="bottons-follow-us-header">
                 <p>FOLLOW US:</p>
                 <a href="#"><img src="#" alt="Facebook"></a>
@@ -18,15 +27,16 @@
                 <a href="#"><img src="#" alt="X"></a>
                 <a href="#"><img src="#" alt="YouTube"></a>
             </div>
-
+            <nav id="menu-horizontal">
+                <a href="#">NEWS</a>
+                <a href="#">PRODUCTS</a>
+                <a href="#">ARTISTS</a>
+                <a href="#">VIDEOS</a>
+                <a href="#">SUPPORT</a>
+            </nav>
         </header>
-        <nav>
-            <a href="#">NEWS</a>
-            <a href="#">PRODUCTS</a>
-            <a href="#">ARTISTS</a>
-            <a href="#">VIDEOS</a>
-            <a href="#">SUPPORT</a>
-        </nav>
+
+        
         <div id="
         emphasis">
             <p>NEW SIGNATURE MODELS</p>
