--- a/html/home.html
+++ b/html/home.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <div class="menu">
+            Menu
+        </div>
         <div class="logo">
             <h1>Envalt</h1>
         </div>
@@ -19,6 +22,7 @@
             <a href="#"><img src="#" alt="YouTube"></a>
         </div>
     </header>
+
     <nav id="menu-horizontal">
         <a href="#">NEWS</a>
         <a href="#">PRODUCTS</a>
